[package]
name = "rust-sokoban"
version = "0.1.0"
authors = ["Olivia <olivia_github@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7"
glam = { version = "0.24", features = ["mint"] }
hecs = "0.10.5"